// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders components/mentions/demo/allowClear.tsx extend context correctly 1`] = `
Array [
  <span
    class="g-mentions-affix-wrapper g-mentions-outlined g-mentions css-var-test-id g-mentions-css-var g-mentions-has-suffix"
  >
    <textarea
      class="rc-textarea"
      rows="1"
    >
      hello world
    </textarea>
    <span
      class="g-mentions-suffix"
    >
      <button
        class="g-mentions-clear-icon"
        tabindex="-1"
        type="button"
      >
        <span
          aria-label="close-circle"
          class="gicon gicon-close-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="close-circle"
            fill="currentColor"
            fill-rule="evenodd"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
            />
          </svg>
        </span>
      </button>
    </span>
  </span>,
  <br />,
  <br />,
  <span
    class="g-mentions-affix-wrapper g-mentions-outlined g-mentions css-var-test-id g-mentions-css-var g-mentions-has-suffix"
  >
    <textarea
      class="rc-textarea"
      rows="1"
    >
      hello world
    </textarea>
    <span
      class="g-mentions-suffix"
    >
      <button
        class="g-mentions-clear-icon"
        tabindex="-1"
        type="button"
      >
        <span
          aria-label="close-square"
          class="gicon gicon-close-square"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="close-square"
            fill="currentColor"
            fill-rule="evenodd"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M880 112c17.7 0 32 14.3 32 32v736c0 17.7-14.3 32-32 32H144c-17.7 0-32-14.3-32-32V144c0-17.7 14.3-32 32-32zM639.98 338.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
            />
          </svg>
        </span>
      </button>
    </span>
  </span>,
  <br />,
  <br />,
  <span
    class="g-mentions-affix-wrapper g-mentions-outlined g-mentions css-var-test-id g-mentions-css-var g-mentions-has-suffix"
  >
    <textarea
      class="rc-textarea"
      rows="3"
    >
      hello world
    </textarea>
    <span
      class="g-mentions-suffix"
    >
      <button
        class="g-mentions-clear-icon"
        tabindex="-1"
        type="button"
      >
        <span
          aria-label="close-circle"
          class="gicon gicon-close-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="close-circle"
            fill="currentColor"
            fill-rule="evenodd"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
            />
          </svg>
        </span>
      </button>
    </span>
  </span>,
]
`;

exports[`renders components/mentions/demo/allowClear.tsx extend context correctly 2`] = `[]`;

exports[`renders components/mentions/demo/async.tsx extend context correctly 1`] = `
<div
  class="g-mentions g-mentions-outlined g-mentions css-var-test-id g-mentions-css-var"
  style="width: 100%;"
>
  <textarea
    class="rc-textarea"
    rows="1"
  />
</div>
`;

exports[`renders components/mentions/demo/async.tsx extend context correctly 2`] = `[]`;

exports[`renders components/mentions/demo/autoSize.tsx extend context correctly 1`] = `
<div
  class="g-mentions g-mentions-outlined"
  style="width: 100%;"
>
  <textarea
    class="rc-textarea"
    rows="1"
    style="resize: none;"
  />
</div>
`;

exports[`renders components/mentions/demo/autoSize.tsx extend context correctly 2`] = `
[
  "Warning: \`NaN\` is an invalid value for the \`%s\` css style property.%s",
]
`;

exports[`renders components/mentions/demo/autosize-textarea-debug.tsx extend context correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-align-stretch g-flex-vertical"
  style="gap: 32px;"
>
  <div
    class="g-mentions g-mentions-outlined g-mentions css-var-test-id g-mentions-css-var"
  >
    <textarea
      class="rc-textarea"
      placeholder="can resize"
      rows="1"
    />
  </div>
  <div
    class="g-mentions g-mentions-outlined g-mentions css-var-test-id g-mentions-css-var"
    style="resize: none;"
  >
    <textarea
      class="rc-textarea"
      placeholder="disable resize"
      rows="1"
      style="resize: none;"
    />
  </div>
</div>
`;

exports[`renders components/mentions/demo/autosize-textarea-debug.tsx extend context correctly 2`] = `[]`;

exports[`renders components/mentions/demo/basic.tsx extend context correctly 1`] = `
<div
  class="g-mentions g-mentions-outlined g-mentions css-var-test-id g-mentions-css-var"
  style="width: 100%;"
>
  <textarea
    class="rc-textarea"
    rows="1"
  >
    @afc163
  </textarea>
</div>
`;

exports[`renders components/mentions/demo/basic.tsx extend context correctly 2`] = `[]`;

exports[`renders components/mentions/demo/component-token.tsx extend context correctly 1`] = `
<div
  style="padding-bottom: 0px; position: relative; min-width: 0;"
>
  <div
    class="g-mentions g-mentions-outlined g-mentions css-var-test-id g-mentions-css-var"
    style="width: 100%; margin: 0px;"
  >
    <textarea
      class="rc-textarea"
      open=""
      rows="1"
    >
      @
    </textarea>
  </div>
</div>
`;

exports[`renders components/mentions/demo/component-token.tsx extend context correctly 2`] = `[]`;

exports[`renders components/mentions/demo/form.tsx extend context correctly 1`] = `
<form
  class="g-form g-form-horizontal css-var-test-id g-form-css-var"
>
  <div
    class="g-form-item css-var-test-id g-form-css-var g-form-item-horizontal"
  >
    <div
      class="g-row g-form-item-row css-var-test-id"
    >
      <div
        class="g-col g-col-6 g-form-item-label css-var-test-id"
      >
        <label
          class=""
          for="coders"
          title="Top coders"
        >
          Top coders
        </label>
      </div>
      <div
        class="g-col g-col-16 g-form-item-control css-var-test-id"
      >
        <div
          class="g-form-item-control-input"
        >
          <div
            class="g-form-item-control-input-content"
          >
            <div
              class="g-mentions g-mentions-outlined g-mentions css-var-test-id g-mentions-css-var"
            >
              <textarea
                class="rc-textarea"
                id="coders"
                rows="1"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="g-form-item css-var-test-id g-form-css-var g-form-item-horizontal"
  >
    <div
      class="g-row g-form-item-row css-var-test-id"
    >
      <div
        class="g-col g-col-6 g-form-item-label css-var-test-id"
      >
        <label
          class="g-form-item-required"
          for="bio"
          title="Bio"
        >
          Bio
        </label>
      </div>
      <div
        class="g-col g-col-16 g-form-item-control css-var-test-id"
      >
        <div
          class="g-form-item-control-input"
        >
          <div
            class="g-form-item-control-input-content"
          >
            <div
              class="g-mentions g-mentions-outlined g-mentions css-var-test-id g-mentions-css-var"
            >
              <textarea
                aria-required="true"
                class="rc-textarea"
                id="bio"
                placeholder="You can use @ to ref user here"
                rows="3"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="g-form-item css-var-test-id g-form-css-var g-form-item-horizontal"
  >
    <div
      class="g-row g-form-item-row css-var-test-id"
    >
      <div
        class="g-col g-col-16 g-col-offset-6 g-form-item-control css-var-test-id"
      >
        <div
          class="g-form-item-control-input"
        >
          <div
            class="g-form-item-control-input-content"
          >
            <div
              class="g-space g-space-horizontal g-space-align-center g-space-gap-row-small g-space-gap-col-small css-var-test-id"
              style="flex-wrap: wrap;"
            >
              <div
                class="g-space-item"
              >
                <button
                  class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
                  type="submit"
                >
                  <span>
                    Submit
                  </span>
                </button>
              </div>
              <div
                class="g-space-item"
              >
                <button
                  class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
                  type="button"
                >
                  <span>
                    Reset
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`renders components/mentions/demo/form.tsx extend context correctly 2`] = `[]`;

exports[`renders components/mentions/demo/placement.tsx extend context correctly 1`] = `
<div
  class="g-mentions g-mentions-outlined g-mentions css-var-test-id g-mentions-css-var"
  style="width: 100%;"
>
  <textarea
    class="rc-textarea"
    rows="1"
  />
</div>
`;

exports[`renders components/mentions/demo/placement.tsx extend context correctly 2`] = `[]`;

exports[`renders components/mentions/demo/prefix.tsx extend context correctly 1`] = `
<div
  class="g-mentions g-mentions-outlined g-mentions css-var-test-id g-mentions-css-var"
  style="width: 100%;"
>
  <textarea
    class="rc-textarea"
    placeholder="input @ to mention people, # to mention tag"
    rows="1"
  />
</div>
`;

exports[`renders components/mentions/demo/prefix.tsx extend context correctly 2`] = `[]`;

exports[`renders components/mentions/demo/readonly.tsx extend context correctly 1`] = `
Array [
  <div
    style="margin-bottom: 10px;"
  >
    <div
      class="g-mentions g-mentions-disabled g-mentions-outlined g-mentions css-var-test-id g-mentions-css-var"
      style="width: 100%;"
    >
      <textarea
        class="rc-textarea rc-textarea-disabled"
        disabled=""
        placeholder="this is disabled Mentions"
        rows="1"
      />
    </div>
  </div>,
  <div
    class="g-mentions g-mentions-outlined g-mentions css-var-test-id g-mentions-css-var"
    style="width: 100%;"
  >
    <textarea
      class="rc-textarea"
      placeholder="this is readOnly Mentions"
      readonly=""
      rows="1"
    />
  </div>,
]
`;

exports[`renders components/mentions/demo/readonly.tsx extend context correctly 2`] = `[]`;

exports[`renders components/mentions/demo/render-panel.tsx extend context correctly 1`] = `
<div
  style="padding-bottom: 0px; position: relative; min-width: 0;"
>
  <div
    class="g-mentions g-mentions-outlined g-mentions css-var-test-id g-mentions-css-var"
    style="width: 100%; margin: 0px;"
  >
    <textarea
      class="rc-textarea"
      open=""
      rows="1"
    >
      @
    </textarea>
  </div>
</div>
`;

exports[`renders components/mentions/demo/render-panel.tsx extend context correctly 2`] = `[]`;

exports[`renders components/mentions/demo/size.tsx extend context correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-align-stretch g-flex-gap-medium g-flex-vertical"
>
  <div
    class="g-mentions g-mentions-outlined g-mentions css-var-test-id g-mentions-css-var g-mentions-lg"
  >
    <textarea
      class="rc-textarea"
      placeholder="large size"
      rows="1"
    />
  </div>
  <div
    class="g-mentions g-mentions-outlined g-mentions css-var-test-id g-mentions-css-var"
  >
    <textarea
      class="rc-textarea"
      placeholder="default size"
      rows="1"
    />
  </div>
  <div
    class="g-mentions g-mentions-outlined g-mentions css-var-test-id g-mentions-css-var g-mentions-sm"
  >
    <textarea
      class="rc-textarea"
      placeholder="small size"
      rows="1"
    />
  </div>
</div>
`;

exports[`renders components/mentions/demo/size.tsx extend context correctly 2`] = `[]`;

exports[`renders components/mentions/demo/status.tsx extend context correctly 1`] = `
<div
  class="g-space g-space-vertical g-space-gap-row-small g-space-gap-col-small css-var-test-id"
>
  <div
    class="g-space-item"
  >
    <div
      class="g-mentions g-mentions-outlined g-mentions-status-error g-mentions css-var-test-id g-mentions-css-var"
    >
      <textarea
        class="rc-textarea"
        rows="1"
      >
        @afc163
      </textarea>
    </div>
  </div>
  <div
    class="g-space-item"
  >
    <div
      class="g-mentions g-mentions-outlined g-mentions-status-warning g-mentions css-var-test-id g-mentions-css-var"
    >
      <textarea
        class="rc-textarea"
        rows="1"
      >
        @afc163
      </textarea>
    </div>
  </div>
</div>
`;

exports[`renders components/mentions/demo/status.tsx extend context correctly 2`] = `[]`;

exports[`renders components/mentions/demo/style-class.tsx extend context correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-align-stretch g-flex-gap-medium g-flex-vertical"
>
  <div
    class="g-mentions g-mentions-outlined g-mentions css-var-test-id g-mentions-css-var acss-3jrxlv"
  >
    <textarea
      class="rc-textarea"
      placeholder="Object"
      rows="2"
      style="resize: vertical; font-size: 14px; font-weight: 200;"
    />
  </div>
  <div
    class="g-mentions g-mentions-filled g-mentions css-var-test-id g-mentions-css-var acss-3jrxlv"
    style="border: 1px solid rgb(114, 46, 209);"
  >
    <textarea
      class="rc-textarea"
      placeholder="Function"
      rows="1"
    />
  </div>
</div>
`;

exports[`renders components/mentions/demo/style-class.tsx extend context correctly 2`] = `[]`;

exports[`renders components/mentions/demo/variant.tsx extend context correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-align-stretch g-flex-vertical"
  style="gap: 12px;"
>
  <div
    class="g-mentions g-mentions-outlined g-mentions css-var-test-id g-mentions-css-var"
  >
    <textarea
      class="rc-textarea"
      placeholder="Outlined"
      rows="1"
    />
  </div>
  <div
    class="g-mentions g-mentions-filled g-mentions css-var-test-id g-mentions-css-var"
  >
    <textarea
      class="rc-textarea"
      placeholder="Filled"
      rows="1"
    />
  </div>
  <div
    class="g-mentions g-mentions-borderless g-mentions css-var-test-id g-mentions-css-var"
  >
    <textarea
      class="rc-textarea"
      placeholder="Borderless"
      rows="1"
    />
  </div>
  <div
    class="g-mentions g-mentions-underlined g-mentions css-var-test-id g-mentions-css-var"
  >
    <textarea
      class="rc-textarea"
      placeholder="Underlined"
      rows="1"
    />
  </div>
</div>
`;

exports[`renders components/mentions/demo/variant.tsx extend context correctly 2`] = `[]`;
